--- a/bower.json
+++ b/bower.json
@@ -21,6 +21,7 @@
     "angular-animate": "^1.5.8",
     "angular-masonry": "~0.16.0",
     "angular-sanitize": "^1.5.8",
-    "angular-scroll": "^1.0.0"
+    "angular-scroll": "^1.0.0",
+    "bootstrap": "^3.3.7"
   }
 }
